src/test/deca/context/invalid/homemade/duplicate_field_decompile.res
class A extends Object {
	int x;
	int x;
}
